add assessment endpoints for find and create
