# app/models/assessment.rb
@@ -3,7 +3,10 @@ class Assessment < ApplicationRecord
   belongs_to :format
   belongs_to :created_by, class_name: 'User'
 
-  enum visiblity: %i[internal external]
+  enum visibility: %i[internal external]
+
+  has_many :questions
+  has_many :solutions
 
   # has_many :related, -> { where(identifier: identifier) } )class_name: 'Assessment',
 
