# app/serializers/assessment_serializer.rb
@@ -1,0 +1,8 @@
+class AssessmentSerializer
+  include FastJsonapi::ObjectSerializer
+  attributes :version,
+             :visibility
+  belongs_to :format
+  has_many :questions
+  has_many :solutions
+end
