# app/serializers/question_serializer.rb
@@ -1,0 +1,6 @@
+class QuestionSerializer
+  include FastJsonapi::ObjectSerializer
+  attributes :content, :created_at, :varient, :format_id
+
+  has_many :assets
+end
