# app/serializers/solution_serializer.rb
@@ -1,0 +1,6 @@
+class SolutionSerializer
+  include FastJsonapi::ObjectSerializer
+  attributes :content, :created_at, :varient, :format_id
+
+  has_many :assets
+end
